
* The glibc.rtld.execstack now supports a compatibility mode to allow
  programs that require an executable stack through dynamic loaded
  shared libraries.

* On Linux, the <termio.h> header and the definition of struct termio
  in <sys/ioctl.h> have been removed. The termio interface has been
  obsolete since the very first version of POSIX.1 in 1988, replaced
  with <termios.h>.

* The support for TX lock elision of pthread mutexes is deprecated on
  all architectures and will be removed in the next release.

* On AArch64 Linux targets supporting SME, setjmp and sigsetjmp will
  disable ZA state of SME.

Changes to build and runtime requirements:

* GCC 12.1 or later is now required to build the GNU C Library.

* GNU Binutils 2.39 or later is now required to build the GNU C Library.

Security related changes:

The following CVEs were fixed in this release, details of which can be
found in the advisories directory of the release tarball:

  [The release manager will add the list generated by
  scripts/process-advisories.sh just before the release.]

The following bugs were resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.41

Major new features:

* Support for testing a glibc build with a set of C and C++ compilers
  different from the C and C++ compilers used to build glibc has been
  added:
  $ ../configure TEST_CC="gcc-6.4.1" TEST_CXX="g++-6.4.1"

  This includes support for testing the glibc build with Clang, e.g.,
  $ ../configure TEST_CC="clang" TEST_CXX="clang++"

  Some run-time failures with Clang are expected.

* The glibc test suite has been extended again significantly, with now
  6232 separate tests compared to 5408 in glibc-2.40.

* In /etc/resolv.conf and the RES_OPTIONS environment variable, option
  flags can now be prefixed with “-” to clear previously set flags.
  For example, if /etc/resolv.conf contains “options no-aaaa”, a