@@ -1,4 +1,4 @@
-/* Linux internal definitions for ioctl.
+/* Linux internal definitions for ioctl.  powerpc version.
    Copyright (C) 2021-2025 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
@@ -17,27 +17,40 @@
    <https://www.gnu.org/licenses/>.  */
 
 #include <termios.h>
+#include <termios_internals.h>
+#include <assert.h>
 
-/* The user-visible size of struct termios has changed.  Catch ioctl calls
-   using the new-style struct termios, and translate them to old-style.  */
+/* PowerPC quirk: on PowerPC only, ioctl() emulates the TCGETS/TCSETS*
+   ioctls with tcgetattr/tcsetattr using the glibc struct termios.
+   As struct termios2 is the same as the kernel struct termios on PowerPC,
+   simply consider the kernel ones as the termios2 interface, even
+   though the kernel doesn't call it that. */
+
+#define GLIBC_TCGETS _IOR ('t', 19, struct termios)
+#define GLIBC_TCSETS _IOW ('t', 20, struct termios)
+#define GLIBC_TCSETSW _IOW ('t', 21, struct termios)
+#define GLIBC_TCSETSF _IOW ('t', 22, struct termios)
+
 static inline bool
 __ioctl_arch (int *r, int fd, unsigned long request, void *arg)
 {
+  static_assert (GLIBC_TCGETS != KERNEL_TCGETS2,
+                 "emulation not possible due to matching ioctl constants");
   switch (request)
     {
-    case TCGETS:
+    case GLIBC_TCGETS:
       *r = __tcgetattr (fd, (struct termios *) arg);
       break;
 
-    case TCSETS:
+    case GLIBC_TCSETS:
       *r = __tcsetattr (fd, TCSANOW, (struct termios *) arg);
       break;
 
-    case TCSETSW:
+    case GLIBC_TCSETSW:
       *r = __tcsetattr (fd, TCSADRAIN, (struct termios *) arg);
       break;
 
-    case TCSETSF:
+    case GLIBC_TCSETSF:
       *r = __tcsetattr (fd, TCSAFLUSH, (struct termios *) arg);
       break;
 
