@@ -1,34 +1,0 @@
-/* Architectural parameters for Linux termios - SPARC version
-
-   Copyright (C) 1991-2025 Free Software Foundation, Inc.
-   This file is part of the GNU C Library.
-
-   The GNU C Library is free software; you can redistribute it and/or
-   modify it under the terms of the GNU Lesser General Public
-   License as published by the Free Software Foundation; either
-   version 2.1 of the License, or (at your option) any later version.
-
-   The GNU C Library is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-   Lesser General Public License for more details.
-
-   You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library; if not, see
-   <https://www.gnu.org/licenses/>.  */
-
-#define _TERMIOS2_NCCS 19
-#define _HAVE_TERMIOS2_C_CC_BEFORE_C_LINE 0
-
-#define _HAVE_STRUCT_OLD_TERMIOS 1
-
-#define OLD_NCCS 17
-struct old_termios
-{
-  tcflag_t c_iflag;		/* input mode flags */
-  tcflag_t c_oflag;		/* output mode flags */
-  tcflag_t c_cflag;		/* control mode flags */
-  tcflag_t c_lflag;		/* local mode flags */
-  cc_t c_line;			/* line discipline */
-  cc_t c_cc[OLD_NCCS];		/* control characters */
-};
