@@ -1,0 +1,26 @@
+#include <linux/termios.h>
+#include <stddef.h>
+
+#ifdef TCGETS2
+# define STRUCT_TERMIOS struct termios2
+#else
+# define TCGETS2  TCGETS
+# define TCSETS2  TCSETS
+# define TCSETSW2 TCSETSW
+# define TCSETSF2 TCSETSF
+# define STRUCT_TERMIOS struct termios
+#endif
+
+--
+KERNEL_TCGETS TCGETS
+KERNEL_TCSETS TCSETS
+KERNEL_TCSETSF TCSETSF
+KERNEL_TCSETSW TCSETSW
+KERNEL_TCGETS2 TCGETS2
+KERNEL_TCSETS2 TCSETS2
+KERNEL_TCSETSF2 TCSETSF2
+KERNEL_TCSETSW2 TCSETSW2
+KERNEL_TERMIOS2_SIZE sizeof (STRUCT_TERMIOS)
+KERNEL_TERMIOS2_CC_OFFSET offsetof (STRUCT_TERMIOS, c_cc)
+KERNEL_TERMIOS2_LINE_OFFSET offsetof (STRUCT_TERMIOS, c_line)
+_TERMIOS2_NCCS sizeof ((STRUCT_TERMIOS) { 0 }.c_cc) / sizeof (cc_t)
